--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "git-push": "git push https://github.com/Dron2019/idealist.git master",
+        "git-push": "git push https://github.com/Dron2019/podil-plaza-2.git master",
         "get-file-names": "dir /b /s",
         "gulp": "gulp"
     },
